--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -1,3 +1,40 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  border-bottom: 1px solid black;
+  padding: 10px 0;
+}
+
+.header-title {
+  text-align: center;
+}
+
+main {
+  min-height: 100vh;
+  padding-top: 40px;
+}
+
+.form-container {
+  margin-top: 50px;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+}
+.form-container > * {
+  margin: 30px 0px;
+}
+
+
+.footer {
+  text-align: center;
+  font-size: 80%;
+}
+
 .footer {
   text-align: center;
   font-size: 80%;
@@ -24,4 +61,12 @@ td.label {
 
 img.profile {
   vertical-align: top;
+}
+
+
+.btn-side-by-side{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  flex-wrap: wrap;
 }
